--- a/index.html
+++ b/index.html
@@ -4,9 +4,53 @@
     <meta charset="UTF-8">
     <title>SIT ON CHAIR</title>
     <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/fonts.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    
+    <header>
+        <div class="main_width">
+            <h1 class="logo --header-text">sit <span>on</span> chair</h1>
+            <nav class="nav --header-text">
+                <ul class="nav__list">
+                    <li class="nav__list__item">
+                        <a class="nav__list__link" href="">o firmie</a>
+                        <!--<div class="dropdown__box">
+                            <div class="dropdown__triangle"></div>-->
+                            <ul class="dropdown__list">
+                                <li class="dropdown__item"><a href="" class="dropdown__link">Aktualności</a></li>
+                                <li class="dropdown__item"><a href="" class="dropdown__link">Nasz team</a></li>
+                                <li class="dropdown__item"><a href="" class="dropdown__link">Historia</a></li>
+                            </ul>
+                        <!--</div>-->
+                    </li>
+                    <li class="nav__list__item">
+                        <a class="nav__list__link" href="">galeria</a></li>
+                    <li class="nav__list__item">
+                        <a class="nav__list__link" href="">kontakt</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+    <!---
+    <section>
+        <div class="main_width">
+            <article class="article__1">
+                <div class="article__1__img"></div>
+                <div class="article__1__content">
+                    <h2>
+                        sit <span>on</span> our <span>chair</span>
+                    </h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas eos facere aliquid eum omnis quos porro voluptatum atque animi quia?</p>
+                    <a href="">zobacz wiecej</a>
+                </div>
+            </article>
+        </div>
+    </section>
+    <section></section>
+    <section></section>
+    <section></section>
+    <footer></footer>
+-->
 </body>
 </html>
