second section end

--- a/index.html
+++ b/index.html
@@ -48,8 +48,26 @@
         </div>
     </section>
     <!--- S E C O N D   S E C T I O N -->
-    <section>
-        
+    <section class="section__2">
+        <div class="main_width">
+                <div class="section__2__item">
+                      <div class="section__2__desc">Chair CLAIR</div>
+                      <div class="section__2__underline"></div>
+                </div>
+                <div class="section__2__item">
+                    <div class="section__2__desc">Chair MARGARITA</div>
+                    <div class="section__2__underline"></div>
+                </div>
+                <div class="section__2__item">
+                    <div class="section__2__desc">Finds all inputs</div>
+                    <div class="section__2__underline"></div>
+                    <div class="section__2__content">
+                        <p> Finds all inputs that are not checked and highlights the next sibling span. Notice there is no change when clicking the checkboxes since no click events have been linked.</p>
+                        <p>Notice there is no change when clicking the checkboxes since no click events have been</p>
+                    </div>
+                </div>
+                
+        </div>
 
     </section>
     <!---
