third section end

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </div>
     </header>
     <!--- F I R S T   S E C T I O N -->
-    <section>
+    <section  class="section__1">
         <div class="main_width">
             <article class="article__1">
                 <div class="article__1__back" href=""></div>
@@ -70,8 +70,65 @@
         </div>
 
     </section>
+    <!--- T H I R D   S E C T I O N -->
+    <section class="section__3">
+            <div class="main_width">
+                <div class="section__3__title">
+                    <p class="section__3__desc">CENNIK</p>
+                    <div class="section__3__underline"></div>  
+                </div>
+            </div>
+            <div class="main_width">
+                <div class="section__3__item">
+                    <div class="section__3__column">
+                        <div class="section__3__column__circle"></div>
+                        <h3>BASIC PLAN</h3>
+                        <div>
+                            <p>85</p>
+                            <p>99</p>
+                            <p>PLN/MSC</p>
+                        </div>
+                        <ul>
+                            <li>Zakup towarów + dowóz</li>
+                            <li>Serwis</li>
+                        </ul>
+                        <a href="">DOŁĄCZ</a>
+                    </div>
+                    <div class="section__3__column">
+                            <div class="section__3__column__circle"></div>
+                            <h3>STANDART PLAN</h3>
+                            <div>
+                                    <p>95</p>
+                                    <p>99</p>
+                                    <p>PLN/MSC</p>
+                                </div>
+                            <ul>
+                                <li>Zakup towarów + dowóz</li>
+                                <li>Serwis</li>
+                                <li>Gwarancja 5 lat</li>
+                            </ul>
+                            <a href="">DOŁĄCZ</a>
+                    </div>
+                    <div class="section__3__column">
+                            <div class="section__3__column__circle"></div>
+                            <h3>ADVANCE PLAN</h3>
+                            <div>
+                                    <p>211</p>
+                                    <p>00</p>
+                                    <p>PLN/MSC</p>
+                                </div>
+                            <ul>
+                                <li>Zakup towarów + dowóz</li>
+                                <li>Serwis</li>
+                                <li>Gwarancja 6 lat</li>
+                                <li>Porady projektanta</li>
+                            </ul>
+                            <a href="">DOŁĄCZ</a>
+                    </div>
+                </div>
+            </div>
+    </section>
     <!---
-    <section></section>
     <section></section>
     <footer></footer>
 -->
