--- a/index.html
+++ b/index.html
@@ -128,8 +128,40 @@
                 </div>
             </div>
     </section>
+    <!--- F O U R T H   S E C T I O N -->
+    <section class="section__4">
+            <div class="main_width">
+                    <div class="section__4__title">
+                        <p class="section__4__desc">KONTAKT</p>
+                        <div class="section__4__underline"></div>  
+                    </div>
+            </div>
+
+            <div class="main_width">
+                    <div class="section__4__item">
+                        <div class="section__4__column">
+                            <form action="" class="action">
+                                <p><input type="text" id="name" placeholder="Imię"></p>
+                                <p><input type="text" id="email" placeholder="email"></p>
+                                <p><textarea name="textarea" id="textarea" cols="30" rows="10" placeholder="Wiadomość"></textarea></p>
+
+                            </form>
+                        </div>
+                        <div class="section__4__column">
+                            <div class="section__4__img"></div>
+                            <div class="checkbox check-box">
+                                    <input type="checkbox" id="transport" data-transport-price="200">
+                                    <label for="transport">Zgadzam się na przetwarzanie danych osobowych</label>
+                            </div>
+                            <a href="" class="section__4__link">Wyślij</a>
+                        </div>
+                    </div>
+            </div>
+
+
+
+    </section>
     <!---
-    <section></section>
     <footer></footer>
 -->
 </body>
