dodany footer i drobne poprawki

--- a/index.html
+++ b/index.html
@@ -47,6 +47,25 @@
             </article>
         </div>
     </section>
+
+    <!--
+    <section  class="section__1">
+        <div class="main_width">
+            <article class="article__1">
+                <div class="article__1__back" href=""></div>
+                <div class="article__1__img"></div>
+                <div class="article__1__content">
+                    <h2>sit <span>on</span> our <span>chair</span></h2>
+                    <p>
+                        Lorem ipsum dolor sit amet enim. Etiam ullamcorper. Suspendisse a pellantesque dui, non felis. Maecenas malesuada elit lectus felis, malesuada ultricies. Curabitur et ligula. Ut molestie a, ultricies porta urna.
+                    </p>
+                    <a href="">zobacz więcej</a>
+                </div>
+                <div class="article__1__next" href=""></div>
+            </article>
+        </div>
+    </section>
+    -->
     <!--- S E C O N D   S E C T I O N -->
     <section class="section__2">
         <div class="main_width">
@@ -162,6 +181,24 @@
 
     </section>
     <!--- F O O T E R  S E C T I O N -->
-    <footer></footer>
+    <footer class="footer">
+        <div class="main_width">
+            <div class="footer__item">
+                    <p>Copyright 2014 | All Rights Reserved - Sit On Chair</p>
+            </div>
+            <div class="footer__item">
+                    <ul class="footer__list">
+                            <li class="footer__list__item"><a href="" class="footer__list_link"></a></li>
+                            <li class="footer__list__item"><a href="" class="footer__list_link"></a></li>
+                            <li class="footer__list__item"><a href="" class="footer__list_link"></a></li>
+                            <li class="footer__list__item"><a href="" class="footer__list_link"></a></li>
+                    </ul>
+            </div>
+            <div class="footer__item">
+                <p class="logo">SIT<span> ON </span>CHAIR</p>
+            </div>
+        </div>
+        
+    </footer>
 </body>
 </html>
