adding footer (continuation of reconstruction)

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <section class="slider">
         <div class="container">
             <article class="slider__article">
-                <div class="slider__article-back" id="#prevSlide" href=""></div>
+                <div class="slider__article-back" id="prevSlide" href=""></div>
                 <ul class="slider__article-images">
                     <li>
                         <div class="slider__article-img"></div>
@@ -66,7 +66,7 @@
                     </p>
                     <a href="">ZOBACZ WIĘCEJ</a>
                 </div>
-                <div class="slider__article-next" id="#nextSlide" href=""></div>
+                <div class="slider__article-next" id="nextSlide" href=""></div>
             </article>
         </div>
     </section>
