--- a/index.html
+++ b/index.html
@@ -189,19 +189,19 @@
 
     </section>
 -->
-    <!--- F O O T E R  S E C T I O N -->
-    <!--
-    <footer class="footer">
-        <div class="main_width">
+    <!--- F O O T E R -->
+
+    <footer>
+        <div class="container">
             <div class="footer__item">
                     <p>Copyright 2014 | All Rights Reserved - Sit On Chair</p>
             </div>
             <div class="footer__item">
-                    <ul class="footer__list">
-                            <li class="footer__list__item"><a href="" class="footer__list_link"></a></li>
-                            <li class="footer__list__item"><a href="" class="footer__list_link"></a></li>
-                            <li class="footer__list__item"><a href="" class="footer__list_link"></a></li>
-                            <li class="footer__list__item"><a href="" class="footer__list_link"></a></li>
+                    <ul class="footer__social">
+                            <li class="footer__social-item"><a href="" class="footer__social-link"></a></li>
+                            <li class="footer__social-item"><a href="" class="footer__social-link"></a></li>
+                            <li class="footer__social-item"><a href="" class="footer__social-link"></a></li>
+                            <li class="footer__social-item"><a href="" class="footer__social-link"></a></li>
                     </ul>
             </div>
             <div class="footer__item">
@@ -210,7 +210,7 @@
         </div>
         
     </footer>
--->
+
     <script src="./js/app.js" type="text/javascript"></script>
 </body>
 </html>
