--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="css/fonts.css">
     <link rel="stylesheet" href="css/style.css">
     -->
-    <link rel="stylesheet" href="css/main.css">
+    <!-- <link rel="stylesheet" href="css/main.css"> -->
+    <script src="./dist/out.js" type="text/javascript"></script>
 </head>
 <body>
 
@@ -211,6 +212,6 @@
         
     </footer>
 
-    <script src="./js/app.js" type="text/javascript"></script>
+
 </body>
 </html>
