restore contact section in scss files

--- a/index.html
+++ b/index.html
@@ -162,14 +162,14 @@
     <!--- C O N T A C T   S E C T I O N -->
 
     <section class="contact">
-        <div class="main_width">
+        <div class="container">
             <div class="contact__title">
                 <p class="contact__title-description">KONTAKT</p>
                 <div class="contact__title-underline"></div>
             </div>
         </div>
 
-        <div class="main_width">
+        <div class="container">
             <div class="contact__item">
                 <div class="contact__column">
                     <form action="" class="action">
