corrections in scss files

--- a/index.html
+++ b/index.html
@@ -171,22 +171,22 @@
 
         <div class="container">
             <div class="contact__item">
-                <div class="contact__column">
-                    <form action="" class="action">
-                        <p><input type="text" id="name" placeholder="Imię"></p>
-                        <p><input type="text" id="email" placeholder="email"></p>
-                        <p><textarea name="textarea" id="textarea" cols="30" rows="10"
-                                placeholder="Wiadomość"></textarea></p>
-                    </form>
-                </div>
-                <div class="contact__column">
-                    <div class="contact__img"></div>
-                    <div class="checkbox check-box">
-                        <input type="checkbox" id="transport" data-transport-price="200">
-                        <label for="transport">Zgadzam się na przetwarzanie danych osobowych</label>
+                <form action="" class="action">
+                    <div class="contact__column">
+                            <p><input type="text" id="name" placeholder="Imię"></p>
+                            <p><input type="text" id="email" placeholder="email"></p>
+                            <p><textarea name="textarea" id="textarea" cols="30" rows="10"
+                                    placeholder="Wiadomość"></textarea></p>
                     </div>
-                    <a href="" class="contact__link">Wyślij</a>
-                </div>
+                    <div class="contact__column">
+                        <div class="contact__img"></div>
+                        <div class="checkbox check-box">
+                            <input type="checkbox" id="transport" data-transport-price="200">
+                            <label for="transport">Zgadzam się na przetwarzanie danych osobowych</label>
+                        </div>
+                        <button class="contact__link">Wyślij</button>
+                    </div>
+                </form>
             </div>
         </div>
 
